Update ApiGatewayController.java