@@ -2,6 +2,7 @@ package org.springframework.samples.petclinic.api.boundary.web;
 
 import org.springframework.samples.petclinic.api.dto.OwnerDetails;
 import org.springframework.samples.petclinic.api.dto.PetDetails;
+import org.springframework.samples.petclinic.api.dto.VisitDetails;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RestController;
@@ -20,11 +21,12 @@ public class ApiGatewayController {
 
     @GetMapping("/api/gateway/owners/{ownerId}")
     public Mono<OwnerDetails> getOwner(@PathVariable int ownerId) {
-        // Dummy data so tests pass
+        VisitDetails visit = new VisitDetails(300, 20, null, "First visit");
+
         PetDetails cat = PetDetails.PetDetailsBuilder.aPetDetails()
                 .id(20)
                 .name("Garfield")
-                .visits(Collections.emptyList())
+                .visits(List.of(visit)) // ✅ Add dummy visit
                 .build();
 
         OwnerDetails owner = OwnerDetails.OwnerDetailsBuilder.anOwnerDetails()
